--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 .bimage {
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     background-image: url(photo3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,21 +26,43 @@
     list-style-type: none;
 }
 
+.hp {
+    color: rgb(37, 43, 45);
+    font-size: 30px;
+    float: right;
+    font-style: oblique;
+    padding-top: 10px;
+    
+}
+
 li {
     display: inline-block;
     margin: 5px 10px;
     padding: 15px;
 }
 
-.pic {
-    height: 100px;
-    border: 2px solid black;
-
-}
-
 .p1 {
     color: white;
-    font-size: 50px;
+    font-size: 60px;
+    padding-right: 20px;
+    text-align: right;
+}
+
+.p2 {
+    color: white;
+    font-size: 40px;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.p3 {
+    color: white;
+    font-size: 20px;
+    text-align: center;
+}
+
+.pic1 {
+    padding-left: 425px;
 }
 
 footer {
